[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/images/catan_background.jpeg" type="Texture" id=2]
[ext_resource path="res://lobby/game_lobby.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -768, -104 )
script = ExtResource( 3 )

[node name="BackgroundRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="CreateBtn" type="Button" parent="."]
margin_left = 48.0
margin_top = 104.0
margin_right = 180.0
margin_bottom = 141.0
theme = ExtResource( 1 )
text = "创建游戏"

[node name="JoinBtn" type="Button" parent="."]
margin_left = 48.0
margin_top = 200.0
margin_right = 180.0
margin_bottom = 237.0
theme = ExtResource( 1 )
text = "加入游戏"

[node name="BackBtn" type="Button" parent="."]
margin_left = 48.0
margin_top = 408.0
margin_right = 180.0
margin_bottom = 445.0
theme = ExtResource( 1 )
text = "返回"

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 104.0
margin_right = -128.0
margin_bottom = -92.0

[node name="HostScroll" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HostList" type="VBoxContainer" parent="Panel/HostScroll"]
margin_right = 576.0
margin_bottom = 344.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListenTimer" type="Timer" parent="."]
autostart = true

[node name="RefreshBtn" type="Button" parent="."]
margin_left = 832.0
margin_top = 104.0
margin_right = 904.0
margin_bottom = 141.0
text = "刷新"

[node name="IPLabel" type="Label" parent="."]
margin_left = 736.0
margin_top = 72.0
margin_right = 828.0
margin_bottom = 103.0
text = "IP地址"

[node name="HostNameLabel" type="Label" parent="."]
margin_left = 256.0
margin_top = 72.0
margin_right = 346.0
margin_bottom = 103.0
text = "主机名"

[connection signal="button_down" from="BackBtn" to="." method="_on_back"]
[connection signal="timeout" from="ListenTimer" to="." method="_on_refresh_host"]
[connection signal="button_down" from="RefreshBtn" to="." method="_on_refresh"]
